--- a/app/static/resources/css/sweStyle.css
+++ b/app/static/resources/css/sweStyle.css
@@ -48,7 +48,7 @@
 
 /* Grid image */
 .sweGridImage {
-  border:1px solid #021a40;
+  border:1px solid black;
   object-fit: cover;
   width: 200px;
   height: 200px;
@@ -369,4 +369,8 @@ ul.rc-pagination {
   border-top: 3px solid rgb(74, 162, 209);
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+#searchButton:hover {
+    background-color: #3498DB !important;
 }
